# hello-bevy

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md  Trunk.toml  cargo.toml  cog.toml  flake.nix  run  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  examples.yaml  release.yaml  test.yaml
assets/shaders/: simple.wgsl  test.wgsl
examples/: breakout.rs  ducks.rs  dvd.rs  jump.rs  shader.rs  tri.rs
graphs/: startup-schedule.dot  update-schedule.dot
macros/: Cargo.toml
macros/src/: lib.rs
src/: assets.rs  audio.rs  base.rs  camera.rs  components.rs  config.rs  data.rs  debug.rs  helpers.rs  input.rs  lib.rs  load.rs  main.rs  menu.rs  prelude.rs  sample_game.rs  save.rs  ui.rs  utils.rs
src/assets/: embedded.rs  fonts.rs  meta.rs  music.rs  sound.rs
src/base/: data.rs  later.rs  sets.rs  states.rs
src/components/: camera.rs  music.rs
src/components/camera/: deferred.rs
src/ui/: debug.rs  loading.rs  menu.rs  navigation.rs  tts.rs  widgets.rs
src/ui/menu/: main.rs  mappings.rs  options.rs
src/wip/: embedded.rs  ui.rs
src/wip/ui/: widgets.rs
src/wip/ui/menu/: main.rs  mappings.rs
wasm/: index.html
