[package]
name = "game"
description = "a bevy game template"
repository = "https://github.com/eerii/hello-bevy"
authors = ["Eri <eri@inventati.org>"]
license = "Apache-2.0 OR MIT"
version = "0.14.1"
edition = "2021"
exclude = ["assets", "wasm", ".data"]

[features]
# Feature sets
default = ["dev"]
dev = [
  "common",
  "bevy/dynamic_linking",
  "bevy/bevy_dev_tools",
  "bevy/embedded_watcher",
  "bevy/file_watcher",
]
release = ["common", "embedded"]
common = []
# Individual features
embedded = ["include_dir"]
pixel_perfect = ["deferred"]
deferred = []
inspector = ["bevy-inspector-egui"]

[dependencies]
# Bevy and plugins
bevy = { version = "0.14", features = ["serialize", "wayland"] }
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager" }
bevy_mod_picking = { version = "0.20", default-features = false, features = [
  "backend_bevy_ui",
] }
bevy-inspector-egui = { version = "0.25", optional = true }

# Local crates
macros = { path = "macros" }

# Other dependencies
include_dir = { version = "0.7", optional = true }
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
macro_rules_attribute = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8" }
anyhow = { version = "1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Storage"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3 # Improves performance when developing, but slows down first compilation significantly
debug = false # Disabled debug symbols for dependencies

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3     # Optimize for performance

[profile.release-web] # Overrides for web builds
inherits = "release"
opt-level = "s"      # Optimize for size
strip = "debuginfo"  # Removes debug information
